--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
+  "name": "json-server-vite",
+  "version": "1.0.0",
+  "description": "Deploy JSON Server with Vite",
+  "main": "src/server.ts",
+  "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/server.cjs",
     "dev": "ts-node src/server.ts"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "json-server": "^0.17.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
